--- a/Gestion des employés/docker-compose.yml
+++ b/Gestion des employés/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
+    container_name: php_app
     ports:
       - "8080:80"
     volumes:
@@ -10,17 +11,18 @@ services:
     depends_on:
       - db
     environment:
-      - MYSQL_HOST=db
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=
-      - MYSQL_DB=laravel
+      MYSQL_HOST: db
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+      MYSQL_DB: laravel
 
   db:
     image: mysql:8.0
+    container_name: mysql_db
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
     ports:
       - "3306:3306"
