--- a/gestion_des_employes/Jenkinsfile
+++ b/gestion_des_employes/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("${IMAGE_NAME}:${IMAGE_TAG}", "Gestion des employés")
+                    docker.build("${IMAGE_NAME}:${IMAGE_TAG}", "gestion_des_employes")
             }
         }
         }
